# Solana

calculator/: Anchor.toml  package-lock.json  package.json
calculator/tests/: calculator.ts
counter_dapp/counter/: Anchor.toml  package-lock.json
crowdfunding/: Anchor.toml  id.json
crowdfunding/backend/: Anchor.toml
crowdfunding/frontend/: package-lock.json  package.json
fungible_token/: burn.ts  createAndMint.ts  guideSecret.json  mint.ts  package-lock.json  package.json  token_metadata.json
giphy/: package-lock.json  package.json
giphy/frontend/: package-lock.json  package.json
giphy/gifportal/: Anchor.toml  createNewPair.js  keypair.json  package-lock.json
giphy/src/: App.jsx
mint-nft/: Anchor.toml
non_fungible_token/: .gitignore  burn.ts  createAndMint.ts  nft_metadata.json  package.json  wallet.ts
presale/: Anchor.toml  package-lock.json
presale/client/: package-lock.json  package.json
presale/program/: Anchor.toml  Readme.md
presale/tests/: presale.ts
safepay/: Anchor.toml  package-lock.json  package.json
safepay/programs/safepay/: Cargo.toml
safepay/programs/safepay/src/: lib.rs
safepay/tests/: safepay.ts
sft-1155/: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
sft-1155/tests/: munity.ts
staking/: create_stake_account.js  deactivate_stake.js  delegate_stake.js  get_delegators_by_validators.js  get_validators.js  package-lock.json  package.json  withdraw_stake.js
token_staking/: Anchor.toml  README.md  buffer_signer.json  new_program_id.json  package-lock.json  package.json  token_staking.json
(+32 files in other folders)
